Fix x overflow

--- a/src/app/paper/paper.component.scss
+++ b/src/app/paper/paper.component.scss
@@ -4,7 +4,7 @@
   grid-gap: 10px;
   //align-items: end;
   @media (min-width: 30em) {
-    grid-template-columns: 75% 25%;
+    grid-template-columns: 74% 24%;
   }
 }
 
